WIP Code may not compile

--- a/jaffle_shop-main/dbt_project.yml
+++ b/jaffle_shop-main/dbt_project.yml
@@ -16,8 +16,10 @@ clean-targets:
     - "dbt_modules"
     - "logs"
 
+
 models:
   jaffle_shop:
+    # add_columns = "{"name":"name","type":"type","default":"default","xtra_attrb":"e.g. Identity definition"}"
       materialized: table
       staging:
         materialized: view
